Fixed text and alignment issue in part overview

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -103,9 +103,16 @@ main {
     color: var(--inverted-text-color);
 }
 
+#overview-container > .text-block h2 {
+    text-align: center;
+    border-bottom: 2px solid var(--secondary-color);
+    margin-bottom:1vw;
+}
+
 #overview-list {
     list-style-type: none;
     display:flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap:2rem;
     padding:1rem;
@@ -113,28 +120,28 @@ main {
 }
 
 #overview-list a {
+    width:clamp(5rem, 80vw, 20rem);
+    height:clamp(5rem, 80vw, 20rem);
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4); 
     display:flex;
     border-radius: 10px;
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    /* padding:clamp(1rem, 3vw, 5rem); */
-    width:clamp(5rem, 80vw, 20rem);
-    height:clamp(5rem, 80vw, 20rem);
+    padding:1rem;
     background-color: var(--secondary-color);
     transition: 0.3s;
 }
 
 #overview-list a h3 {
     color:var(--text-color);
-    font-size: 2rem;
+    font-size: clamp(1.5rem, 3vw, 2rem);
     margin-top:auto;
 }
 
 #overview-list a img {
-    max-width:90%;
-    max-height:90%;
+    max-width:85%;
+    max-height:85%;
     margin:auto;
 }
 #overview-list a:hover {
